--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "ecmaVersion": 2018,
-        "project": ["./meal-booker/tsconfig.json"]
+        "project": ["./tsconfig.json"]
       },
       "rules": {
         "no-console": "error",
